[project]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick751882",email = "stufftrash2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
